fix: 알라딘 키 추적 관련 로직 보완 -